[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsss"
version = "1.0.1"
description = "Local file to Google Drive uploader support library"
requires-python = ">=3.9"
readme = "README.md"
authors = [
  { name = "KutoKashiwagi" }
]
dependencies = [
  "gdrivemgr@git+https://github.com/Swimmy-Tachikawa/gdrivemgr.git@v1.2.0"
]